files uploading & renaming of target folder/file

--- a/templates/html/html-output/sections/tmpl_1.html
+++ b/templates/html/html-output/sections/tmpl_1.html
@@ -1,55 +1,31 @@
-<!-- block -->
-<div class="block" id="1">
+<!-- new_sect -->
+<div class="new_sect" id="1">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="block__title text-center text-uppercase">С нами уже сотрудничают</h3>
+                <h3 class="new_sect__title text-left text-capitalize">С нами уже сотрудничают</h3>
             </div>
         </div>
     </div>
 
-    <div class="container block__container">
-        <div class="row block__row"><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
-                <div class="block__item text-center">
-                    <img src="img/block/photos/block_1.jpg" alt="" class="block__img">
+    <div class="container new_sect__container">
+        <div class="row new_sect__row"><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
+                <div class="new_sect__item text-center">
+                    <img src="images/new_sect/photos/new_sect_1.jpg" alt="" class="new_sect__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
-                <div class="block__item text-center">
-                    <img src="img/block/photos/block_2.jpg" alt="" class="block__img">
+            </div><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
+                <div class="new_sect__item text-center">
+                    <img src="images/new_sect/photos/new_sect_2.jpg" alt="" class="new_sect__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
-                <div class="block__item text-center">
-                    <img src="img/block/photos/block_3.jpg" alt="" class="block__img">
+            </div><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
+                <div class="new_sect__item text-center">
+                    <img src="images/new_sect/photos/new_sect_3.jpg" alt="" class="new_sect__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
-                <div class="block__item text-center">
-                    <img src="img/block/photos/block_4.jpg" alt="" class="block__img">
-                </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
-                <div class="block__item text-center">
-                    <img src="img/block/photos/block_5.jpg" alt="" class="block__img">
-                </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
-                <div class="block__item text-center">
-                    <img src="img/block/photos/block_6.jpg" alt="" class="block__img">
-                </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
-                <div class="block__item text-center">
-                    <img src="img/block/photos/block_7.jpg" alt="" class="block__img">
-                </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
-                <div class="block__item text-center">
-                    <img src="img/block/photos/block_8.jpg" alt="" class="block__img">
-                </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
-                <div class="block__item text-center">
-                    <img src="img/block/photos/block_9.jpg" alt="" class="block__img">
-                </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
-                <div class="block__item text-center">
-                    <img src="img/block/photos/block_10.jpg" alt="" class="block__img">
+            </div><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
+                <div class="new_sect__item text-center">
+                    <img src="images/new_sect/photos/new_sect_4.jpg" alt="" class="new_sect__img">
                 </div>
             </div></div>
     </div>
 </div>
-<!-- block End -->
+<!-- new_sect End -->
