--- a/templates/html/html-output/sections/tmpl_2.html
+++ b/templates/html/html-output/sections/tmpl_2.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="services__title text-center text-capitalize">We produce</div>
+                <div class="services__title text-center text-uppercase">Итальянский язык</div>
             </div>
         </div>
     </div>
@@ -12,28 +12,28 @@
         <div class="row services__row"><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-479-100-479 col-380-100-380 services__innerItem">
                 <div class="services__item">
                     <div class="services__header text-center">
-                        <img src="img/services/photos/services_1.jpg" alt="" class="services__img">
+                        <img src="images/services/photos/services_1.jpg" alt="" class="services__img">
                     </div>
                     <div class="services__footer text-center">Помощь в подборе<br> спортивного оборудования</div>
                 </div>
             </div><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-479-100-479 col-380-100-380 services__innerItem">
                 <div class="services__item">
                     <div class="services__header text-center">
-                        <img src="img/services/photos/services_2.jpg" alt="" class="services__img">
+                        <img src="images/services/photos/services_2.jpg" alt="" class="services__img">
                     </div>
                     <div class="services__footer text-center">Помощь в подборе<br> спортивного оборудования</div>
                 </div>
             </div><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-479-100-479 col-380-100-380 services__innerItem">
                 <div class="services__item">
                     <div class="services__header text-center">
-                        <img src="img/services/photos/services_3.jpg" alt="" class="services__img">
+                        <img src="images/services/photos/services_3.jpg" alt="" class="services__img">
                     </div>
                     <div class="services__footer text-center">Помощь в подборе<br> спортивного оборудования</div>
                 </div>
             </div><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-479-100-479 col-380-100-380 services__innerItem">
                 <div class="services__item">
                     <div class="services__header text-center">
-                        <img src="img/services/photos/services_4.jpg" alt="" class="services__img">
+                        <img src="images/services/photos/services_4.jpg" alt="" class="services__img">
                     </div>
                     <div class="services__footer text-center">Помощь в подборе<br> спортивного оборудования</div>
                 </div>
