--- a/templates/html/html-output/sections/tmpl_1.html
+++ b/templates/html/html-output/sections/tmpl_1.html
@@ -1,31 +1,31 @@
-<!-- new_sect -->
-<div class="new_sect" id="1">
+<!-- partners -->
+<div class="partners" id="1">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="new_sect__title text-left text-capitalize">С нами уже сотрудничают</h3>
+                <h3 class="partners__title text-left text-capitalize">С нами уже сотрудничают</h3>
             </div>
         </div>
     </div>
 
-    <div class="container new_sect__container">
-        <div class="row new_sect__row"><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
-                <div class="new_sect__item text-center">
-                    <img src="images/new_sect/photos/new_sect_1.jpg" alt="" class="new_sect__img">
+    <div class="container partners__container">
+        <div class="row partners__row"><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="images/partners/photos/partners_1.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
-                <div class="new_sect__item text-center">
-                    <img src="images/new_sect/photos/new_sect_2.jpg" alt="" class="new_sect__img">
+            </div><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="images/partners/photos/partners_2.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
-                <div class="new_sect__item text-center">
-                    <img src="images/new_sect/photos/new_sect_3.jpg" alt="" class="new_sect__img">
+            </div><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="images/partners/photos/partners_3.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
-                <div class="new_sect__item text-center">
-                    <img src="images/new_sect/photos/new_sect_4.jpg" alt="" class="new_sect__img">
+            </div><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="images/partners/photos/partners_4.jpg" alt="" class="partners__img">
                 </div>
             </div></div>
     </div>
 </div>
-<!-- new_sect End -->
+<!-- partners End -->
