--- a/templates/html/html-output/sections/tmpl_1.html
+++ b/templates/html/html-output/sections/tmpl_1.html
@@ -1,55 +1,31 @@
-<!-- first -->
-<div class="first" id="1">
+<!-- partners -->
+<div class="partners" id="1">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="first__title text-center text-uppercase">С нами уже сотрудничают</h3>
+                <h3 class="partners__title text-left text-capitalize">С нами уже сотрудничают</h3>
             </div>
         </div>
     </div>
 
-    <div class="container first__container">
-        <div class="row first__row"><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 first__innerItem">
-                <div class="first__item text-center">
-                    <img src="images/first/photos/first_1.jpg" alt="" class="first__img">
+    <div class="container partners__container">
+        <div class="row partners__row"><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="images/partners/photos/partners_1.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 first__innerItem">
-                <div class="first__item text-center">
-                    <img src="images/first/photos/first_2.jpg" alt="" class="first__img">
+            </div><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="images/partners/photos/partners_2.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 first__innerItem">
-                <div class="first__item text-center">
-                    <img src="images/first/photos/first_3.jpg" alt="" class="first__img">
+            </div><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="images/partners/photos/partners_3.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 first__innerItem">
-                <div class="first__item text-center">
-                    <img src="images/first/photos/first_4.jpg" alt="" class="first__img">
-                </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 first__innerItem">
-                <div class="first__item text-center">
-                    <img src="images/first/photos/first_5.jpg" alt="" class="first__img">
-                </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 first__innerItem">
-                <div class="first__item text-center">
-                    <img src="images/first/photos/first_6.jpg" alt="" class="first__img">
-                </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 first__innerItem">
-                <div class="first__item text-center">
-                    <img src="images/first/photos/first_7.jpg" alt="" class="first__img">
-                </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 first__innerItem">
-                <div class="first__item text-center">
-                    <img src="images/first/photos/first_8.jpg" alt="" class="first__img">
-                </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 first__innerItem">
-                <div class="first__item text-center">
-                    <img src="images/first/photos/first_9.jpg" alt="" class="first__img">
-                </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 first__innerItem">
-                <div class="first__item text-center">
-                    <img src="images/first/photos/first_10.jpg" alt="" class="first__img">
+            </div><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="images/partners/photos/partners_4.jpg" alt="" class="partners__img">
                 </div>
             </div></div>
     </div>
 </div>
-<!-- first End -->
+<!-- partners End -->
