--- a/templates/html/html-output/sections/tmpl_2.html
+++ b/templates/html/html-output/sections/tmpl_2.html
@@ -1,43 +1,43 @@
-<!-- first -->
-<div class="first" id="2">
+<!-- services -->
+<div class="services" id="2">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="first__title text-center text-capitalize">We produce</div>
+                <div class="services__title text-center text-uppercase">Итальянский язык</div>
             </div>
         </div>
     </div>
 
-    <div class="container first__container">
-        <div class="row first__row"><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-479-100-479 col-380-100-380 first__innerItem">
-                <div class="first__item">
-                    <div class="first__header text-center">
-                        <img src="images/first/photos/first_1.jpg" alt="" class="first__img">
+    <div class="container services__container">
+        <div class="row services__row"><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-479-100-479 col-380-100-380 services__innerItem">
+                <div class="services__item">
+                    <div class="services__header text-center">
+                        <img src="images/services/photos/services_1.jpg" alt="" class="services__img">
                     </div>
-                    <div class="first__footer text-center">Помощь в подборе<br> спортивного оборудования</div>
+                    <div class="services__footer text-center">Помощь в подборе<br> спортивного оборудования</div>
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-479-100-479 col-380-100-380 first__innerItem">
-                <div class="first__item">
-                    <div class="first__header text-center">
-                        <img src="images/first/photos/first_2.jpg" alt="" class="first__img">
+            </div><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-479-100-479 col-380-100-380 services__innerItem">
+                <div class="services__item">
+                    <div class="services__header text-center">
+                        <img src="images/services/photos/services_2.jpg" alt="" class="services__img">
                     </div>
-                    <div class="first__footer text-center">Помощь в подборе<br> спортивного оборудования</div>
+                    <div class="services__footer text-center">Помощь в подборе<br> спортивного оборудования</div>
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-479-100-479 col-380-100-380 first__innerItem">
-                <div class="first__item">
-                    <div class="first__header text-center">
-                        <img src="images/first/photos/first_3.jpg" alt="" class="first__img">
+            </div><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-479-100-479 col-380-100-380 services__innerItem">
+                <div class="services__item">
+                    <div class="services__header text-center">
+                        <img src="images/services/photos/services_3.jpg" alt="" class="services__img">
                     </div>
-                    <div class="first__footer text-center">Помощь в подборе<br> спортивного оборудования</div>
+                    <div class="services__footer text-center">Помощь в подборе<br> спортивного оборудования</div>
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-479-100-479 col-380-100-380 first__innerItem">
-                <div class="first__item">
-                    <div class="first__header text-center">
-                        <img src="images/first/photos/first_4.jpg" alt="" class="first__img">
+            </div><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-479-100-479 col-380-100-380 services__innerItem">
+                <div class="services__item">
+                    <div class="services__header text-center">
+                        <img src="images/services/photos/services_4.jpg" alt="" class="services__img">
                     </div>
-                    <div class="first__footer text-center">Помощь в подборе<br> спортивного оборудования</div>
+                    <div class="services__footer text-center">Помощь в подборе<br> спортивного оборудования</div>
                 </div>
             </div></div>
-    </div><!-- first__container -->
+    </div><!-- services__container -->
 </div>
-<!-- first End -->
+<!-- services End -->
